fixed z-index of chat

--- a/public/css/chat.less
+++ b/public/css/chat.less
@@ -7,6 +7,7 @@ div#ic-chat {
     background:@dark;
     color:@dark;
     .hasTransition(0.5s);
+    z-index:2;
 
     div#header-bar {
         height:15px;
